--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "path": "0.4.9",
       "http": "0.0.0",
       "mongoose": "3.8.15",
-      "ejs":"1.0.0"
+      "ejs":"1.0.0",
+      "express-ejs-layouts": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
